# TensorRT

./: .gitignore  Dockerfile  PERFORMANCE_RESULTS.md  PRECISION_COMPARISON_REPORT.md  README.md  README_en.md  TENSORRT_8x_vs_10x_COMPARISON.md  TENSORRT_COMPLETE_PRECISION_REPORT.md  TensorRT_8x_PRECISION_GUIDE.md  TensorRT_8x_PRECISION_GUIDE_en.md  benchmark_performance.py  check_trt.py  compare_models.py  complete_precision_comparison.json  complete_precision_comparison.py  convert_to_tensorrt.py  convert_to_tensorrt_batch.py  docker_trt.sh  docker_trt8x.sh  export_csv_data.py  generate_trt8x_engine.py  precision_comparison.py  precision_comparison_fp16.py  precision_comparison_results.json  tensorrt_inference_8x  tensorrt_inference_8x.cpp  tensorrt_inference_compatible.cpp  tensorrt_inference_csv.cpp  tensorrt_inference_final.cpp  tensorrt_int8_comparison.py  tensorrt_precision_comparison.json  test_trt8x_precision.sh
tf/: CMakeLists.txt  Dockerfile  README.md  analyze_results.py  cifar10.py  compare_models.py  conv_savemodel2trt.py  convert_to_onnx.py  convert_to_tensorrt.py  docker_tf.sh  run_complete_pipeline.sh  run_tensorflow_steps.sh  run_tensorrt_steps.sh  savedmodel_predictions.npy  tensorrt_inference.cpp  tensorrt_inference_final  test_labels.npy  test_samples.npy
tf/cifar10_vgg_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
tf/cifar10_vgg_model/variables/: variables.index
tf/cifar10_vgg_model_trt/: fingerprint.pb
trt/: Dockerfile  analyze_model.py  debug_trt_cpp_test.cpp  docker_tf.sh  predict_trt.py  tensorrt_version.py  trt_cpp_test  (+3 more)
